policies/kyverno/01-disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-runasnonroot
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - trivy-system
        - kyverno
        - argocd
        - kube-system
    validate:
      message: "Les conteneurs doivent tourner avec runAsNonRoot: true"
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
          containers:
          - securityContext:
              =(allowPrivilegeEscalation): false
              capabilities:
                drop:
                - ALL
