policies/kyverno/03-require-security-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-security-labels
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-security-labels
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - trivy-system
        - kyverno
        - argocd
        - kube-system
        - boutique
    validate:
      message: "Les pods doivent avoir les labels app, tier et env"
      pattern:
        metadata:
          labels:
            app: "?*"
            tier: "?*"
            env: "?*"
