policies/kyverno/04-disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-privileged
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - trivy-system
        - kyverno
        - argocd
        - kube-system
    validate:
      message: "Les conteneurs privileged sont interdits"
      pattern:
        spec:
          containers:
          - securityContext:
              =(privileged): false
