policies/kyverno/06-disallow-plaintext-secrets.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-plaintext-secrets
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-env-secrets
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - trivy-system
        - kyverno
        - argocd
        - kube-system
    validate:
      message: "Les variables d'environnement sensibles (PASSWORD, SECRET, TOKEN, KEY) ne doivent pas être définies en clair"
      pattern:
        spec:
          =(containers):
          - =(env):
            - name: "!*PASSWORD*"
            - name: "!*SECRET*"
            - name: "!*TOKEN*"
            - name: "!*KEY*"
