policies/kyverno/08-disallow-untrusted-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-untrusted-registries
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-registry
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - trivy-system
        - kyverno
        - argocd
        - kube-system
        - boutique
    validate:
      message: "Seuls les registres docker.io, gcr.io, ghcr.io et Docker Hub sont autorisés"
      pattern:
        spec:
          containers:
          - image: "docker.io/* | gcr.io/* | ghcr.io/* | !*.*/*"
