policies/kyverno/09-require-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-readonly
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - trivy-system
        - kyverno
        - argocd
        - kube-system
    validate:
      message: "Le filesystem root doit être en lecture seule (readOnlyRootFilesystem: true)"
      pattern:
        spec:
          containers:
          - securityContext:
              readOnlyRootFilesystem: true
