policies/kyverno/10-disallow-host-network.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-network
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-host-network
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - trivy-system
        - kyverno
        - argocd
        - kube-system
    validate:
      message: "hostNetwork et hostPID sont interdits"
      pattern:
        spec:
          =(hostNetwork): false
          =(hostPID): false
